--- a/login.html
+++ b/login.html
@@ -67,41 +67,202 @@
 
     <!-- LOGIN SECTION -->
 
-    <section class="flex">
+    <section class="flex justify-center">
 
-        <div class="w-1/2">
+        <div class="w-1/2 hidden md:block">
             <img src="../GetDPhone/img/login.png" alt="">
         </div>
 
-        <div class="py-12 mt-12 w-1/2 flex flex-col items-center px-10">
+        <div class="py-12 mt-12 w-full md:w-1/2 flex flex-col items-center px-10">
 
-            <div class="flex">
-                <h2 class="text-3xl mr-40 border-b-2 border-red-500 cursor-pointer">LOGIN</h2>
-                <h2 class="text-3xl text-gray-300 cursor-pointer">SIGNUP</h2>
+            <div class="flex font-bold">
+
+                <h2 class="text-xl sm:text-3xl mr-20 md:mr-20 sm:mr-40 border-b-2 border-red-500 cursor-pointer">LOGIN
+                </h2>
+
+                <h2 class="text-xl sm:text-3xl text-gray-300 cursor-pointer">SIGNUP</h2>
+
             </div>
 
 
             <form action="#" class="flex w-full flex-col mt-4">
 
-                <label for="email" class="mb-2">Email:</label>
-                <input type="text" placeholder="Email" id="email" class="border p-2 mb-4">
+                <label for="email" class="mb-2 text-xl">Email:</label>
+                <input type="text" placeholder="Email" id="email"
+                    class="border-2 border-black rounded hover:border-blue-700 p-2 mb-4">
 
-                <label for="password" class="mb-2">Password:</label>
-                <input type="password" placeholder="Password" id="password" class="border p-2">
+                <label for="password" class="mb-2 text-xl">Password:</label>
+                <input type="password" placeholder="Password" id="password"
+                    class="border p-2 border-2 border-black rounded hover:border-blue-700">
 
 
-                <div class="flex justify-center items-center">
-                    <button class="mt-2 rounded bg-black text-white px-6 py-2">LOGIN</button>
-                    <p class="text-red-500 ml-2 cursor-pointer">Forget Password?</p>
+                <div class="flex justify-center items-center mt-6">
+
+                    <button class="rounded bg-black text-white px-6 py-2">LOGIN</button>
+                    <p class="text-red-500 ml-2 cursor-pointer font-medium text-lg">Forget Password?</p>
+
                 </div>
 
             </form>
+
+            <div class="flex">
+
+                <div class="border-b-2 border-black"></div>
+
+                <p>OR</p>
+
+                <div class="border-b-2 border-black"></div>
+
+            </div>
+
+            <div class="mt-4">
+
+                <p class="text-xl font-medium">Sign In using your account with</p>
+
+                <div class="flex mt-4 justify-center">
+
+                    <a href="">
+                        <img src="../GetDPhone/img/icons/google.png" class="h-10 w-10 mr-6" alt="">
+                    </a>
+
+                    <a href="">
+                        <img src="../GetDPhone/img/Cus_Info_icons/instagram.png" alt="" class="h-10 w-10 mr-6">
+                    </a>
+
+                    <a href="">
+                        <img src="../GetDPhone/img/Cus_Info_icons/twitter.png" alt="" class="h-10 w-10">
+                    </a>
+                </div>
+
+            </div>
+
+            <div class="flex flex-col md:flex-row items-center mt-10">
+
+                <p class="font-medium md:text-sm text-xl cursor-pointer">
+                    Don't already have an account?</p>
+
+                <p class="text-red-500 ml-2 cursor-pointer font-medium text-lg">Create One</p>
+
+            </div>
 
         </div>
 
     </section>
 
     <!-- LOGIN SECTION ENDS -->
+
+    <!-- Footer -->
+
+    <footer class="bg-gray-900 text-gray-100">
+
+        <div class="flex flex-col lg:flex-row justify-between mt-40 px-12 py-8">
+
+            <div class="">
+                <h1 class="font-bold text-4xl mb-6 lg:mb-0">getdphone</h1>
+            </div>
+
+            <div class="">
+
+                <h2 class="underline decoration-2 underline-offset-8 text-lg">Quick Links</h2>
+
+                <ul class="mt-3 mb-10 text-lg">
+                    <a href="">
+                        <li class="mb-0 md:mb-2">Sign Up</li>
+                    </a>
+                    <a href="">
+                        <li class="mb-0 md:mb-2">About Us</li>
+                    </a>
+                    <a href="">
+                        <li class="mb-0 md:mb-2">Shop</li>
+                    </a>
+                    <a href="">
+                        <li>Contact Us</li>
+                    </a>
+                </ul>
+
+            </div>
+
+            <div>
+
+                <h2 class="underline decoration-2 underline-offset-8 text-lg">Others</h2>
+
+                <ul class="mt-3 mb-10 text-lg">
+                    <a href="">
+                        <li class="mb-0 md:mb-2">User FAQs</li>
+                    </a>
+                    <a href="">
+                        <li class="mb-0 md:mb-2">Contact Us</li>
+                    </a>
+                    <a href="">
+                        <li class="mb-0 md:mb-2">Legal</li>
+                    </a>
+                    <a href="">
+                        <li class="mb-0 md:mb-2">Privacy Policy</li>
+                    </a>
+                    <a href="">
+                        <li class="">Terms and Conditions</li>
+                    </a>
+                </ul>
+
+            </div>
+
+            <div>
+
+                <h2 class="underline decoration-2 underline-offset-8 text-lg">Products</h2>
+
+                <ul class="mt-3 mb-10 text-lg">
+                    <a href="">
+                        <li class="mb-0 md:mb-2">iPhone</li>
+                    </a>
+                    <a href="">
+                        <li class="mb-0 md:mb-2">Samsung</li>
+                    </a>
+                    <a href="">
+                        <li>Huawei</li>
+                    </a>
+                </ul>
+
+            </div>
+
+            <div>
+
+                <p class="text-lg">Subscribe to our newsletter and be <br> the first to know about our updates</p>
+
+                <div class="mt-4">
+                    <input type="text" class="rounded p-2" placeholder="Email Address">
+                    <button class="bg-gray-100 text-blue-400 font-bold rounded p-2 mt-2 sm:mt-0">Subscribe</button>
+                </div>
+
+            </div>
+
+        </div>
+
+        <hr>
+
+        <div class="flex justify-between items-center flex-col lg:flex-row px-20 py-4">
+
+            <div class="mb-4 lg:mb-0">
+                Copyright <span class="copyright">&copy</span> 2021. All rights Reserved.
+            </div>
+
+            <div class="flex">
+                <a href="">
+                    <img src="../GetDPhone/img/Footer icons/youtube.png" alt="" class="h-6 w-6 mr-2"> </a>
+
+                <a href="">
+                    <img src="../GetDPhone/img/Footer icons/instagram.png" alt="" class="h-6 w-6 mr-2"></a>
+
+                <a href="">
+                    <img src="../GetDPhone/img/Footer icons/facebook.png" alt="" class="h-6 w-6 mr-2"> </a>
+
+                <a href="">
+                    <img src="../GetDPhone/img/Footer icons/twitter.png" alt="" class="h-6 w-6"> </a>
+            </div>
+
+        </div>
+
+    </footer>
+    <!-- footer end -->
 
 </body>
 
