Refactored file to add a margin top to an "OR" element

--- a/login.html
+++ b/login.html
@@ -105,13 +105,9 @@
 
             </form>
 
-            <div class="flex">
+            <div>
 
-                <div class="border-b-2 border-black"></div>
-
-                <p>OR</p>
-
-                <div class="border-b-2 border-black"></div>
+                <div class="font-bold mt-4">OR</div>
 
             </div>
 
