Refactored file to add a link to the signup page

--- a/login.html
+++ b/login.html
@@ -137,7 +137,9 @@
                 <p class="font-medium md:text-sm text-xl cursor-pointer">
                     Don't already have an account?</p>
 
-                <p class="text-red-500 ml-2 cursor-pointer font-medium text-lg">Create One</p>
+                <a href="signup.html">
+                    <p class="text-red-500 ml-2 cursor-pointer font-medium text-lg">Create One</p>
+                </a>
 
             </div>
 
