--- a/signup.html
+++ b/signup.html
@@ -65,7 +65,7 @@
 
     <!-- HEADER END -->
 
-    <!-- LOGIN SECTION -->
+    <!-- SIGNUP SECTION -->
 
     <section class="flex justify-center">
 
@@ -156,7 +156,7 @@
 
     </section>
 
-    <!-- LOGIN SECTION ENDS -->
+    <!-- SIGNUP SECTION ENDS -->
 
     <!-- Footer -->
 
