--- a/checkout(shipping).html
+++ b/checkout(shipping).html
@@ -24,109 +24,126 @@
 
     <!-- Shipping Section -->
 
-    <section class="mx-4 mt-16">
+    <section class="mx-2 sm:mx-10 mt-16">
 
-        <div class="flex justify-between text-xl border-b border-black mb-6">
+        <div class="flex justify-between text-lg border-b border-black mb-6 sm:text-2xl lg:text-3xl">
             <h1 class="font-bold border-b-4 border-black">Shipping</h1>
             <h1 class="text-gray-400">Payment</h1>
             <h1 class="text-gray-400">Confirmation</h1>
         </div>
 
-        <h1 class="text-center my-4 font-bold text-4xl">Shipping Address</h1>
+        <div class="flex flex-col md:flex-row justify-between">
 
-        <form action="#" class="flex w-full flex-col">
+            <div class="md:w-2/4 md:pr-32">
 
-            <label for="name" class="mb-2 text-xl">Name</label>
-            <input type="text" placeholder="Full Name" id="name"
-                class="border border-black rounded hover:border-blue-700 p-2 mb-4">
+                <h1 class="text-center mt-4 mb-10 font-bold text-2xl sm:text-4xl">Shipping Address</h1>
 
-            <label for="address" class="mb-2 text-xl">Address</label>
-            <input type="text" placeholder="Address" id="address"
-                class="border p-2 border-black rounded hover:border-blue-700 mb-4">
+                <form action="#" class="flex w-full flex-col">
 
-            <label for="number" class="mb-2 text-xl">Mobile Phone Number</label>
-            <input type="number" placeholder="Mobile Number" id="number"
-                class="border p-2 border-black rounded hover:border-blue-700 mb-4">
+                    <label for="name" class="mb-2 text-xl">Name</label>
+                    <input type="text" placeholder="Full Name" id="name"
+                        class="border border-black rounded hover:border-blue-700 p-2 mb-4">
 
-            <label for="state" class="mb-2 text-xl inline-block">State</label>
-            <select name="state" id="state" class="border p-2 border-black rounded hover:border-blue-700 mb-4">
-                <option value="">Abia</option>
-                <option value="">Adamawa</option>
-                <option value="">Akwa Ibom</option>
-                <option value="">Anambra</option>
-                <option value="">Bauchi</option>
-                <option value="">Bayelsa</option>
-                <option value="">Benue</option>
-                <option value="">Borno</option>
-                <option value="">Cross River</option>
-                <option value="">Delta</option>
-                <option value="">Ebonyi</option>
-                <option value="">Edo</option>
-                <option value="">Ekiti</option>
-                <option value="">Enugu</option>
-                <option value="">Gombe</option>
-            </select>
+                    <label for="address" class="mb-2 text-xl">Address</label>
+                    <input type="text" placeholder="Address" id="address"
+                        class="border p-2 border-black rounded hover:border-blue-700 mb-4">
 
-            <label for="city" class="mb-2 text-xl">City</label>
-            <select name="city" id="city" class="border p-2 border-black rounded hover:border-blue-700 mb-4">
-                <option value="">Wuse</option>
-                <option value="">Adamawa</option>
-                <option value="">Akwa Ibom</option>
-                <option value="">Anambra</option>
-                <option value="">Bauchi</option>
-                <option value="">Bayelsa</option>
-                <option value="">Benue</option>
-                <option value="">Borno</option>
-                <option value="">Cross River</option>
-                <option value="">Delta</option>
-                <option value="">Ebonyi</option>
-                <option value="">Edo</option>
-                <option value="">Ekiti</option>
-                <option value="">Enugu</option>
-                <option value="">Gombe</option>
-            </select>
+                    <label for="number" class="mb-2 text-xl">Mobile Phone Number</label>
+                    <input type="number" placeholder="Mobile Number" id="number"
+                        class="border p-2 border-black rounded hover:border-blue-700 mb-4">
 
-            <label for="code" class="mb-2 text-xl">Zip Code</label>
-            <input type="code" placeholder="903101" id="code"
-                class="border p-2 border-black rounded hover:border-blue-700">
+                    <label for="state" class="mb-2 text-xl">State</label>
+                    <select name="state" id="state" class="border p-2 border-black rounded hover:border-blue-700 mb-4">
+                        <option value="">Abia</option>
+                        <option value="">Adamawa</option>
+                        <option value="">Akwa Ibom</option>
+                        <option value="">Anambra</option>
+                        <option value="">Bauchi</option>
+                        <option value="">Bayelsa</option>
+                        <option value="">Benue</option>
+                        <option value="">Borno</option>
+                        <option value="">Cross River</option>
+                        <option value="">Delta</option>
+                        <option value="">Ebonyi</option>
+                        <option value="">Edo</option>
+                        <option value="">Ekiti</option>
+                        <option value="">Enugu</option>
+                        <option value="">Gombe</option>
+                    </select>
 
-        </form>
+                    <label for="city" class="mb-2 text-xl">City</label>
+                    <select name="city" id="city" class="border p-2 border-black rounded hover:border-blue-700 mb-4">
+                        <option value="">Wuse</option>
+                        <option value="">Adamawa</option>
+                        <option value="">Akwa Ibom</option>
+                        <option value="">Anambra</option>
+                        <option value="">Bauchi</option>
+                        <option value="">Bayelsa</option>
+                        <option value="">Benue</option>
+                        <option value="">Borno</option>
+                        <option value="">Cross River</option>
+                        <option value="">Delta</option>
+                        <option value="">Ebonyi</option>
+                        <option value="">Edo</option>
+                        <option value="">Ekiti</option>
+                        <option value="">Enugu</option>
+                        <option value="">Gombe</option>
+                    </select>
 
-        <div class="flex justify-center mt-6">
-            <button class="px-6 py-2 bg-black text-white rounded font-bold tracking-wider">Save</button>
-        </div>
+                    <label for="code" class="mb-2 text-xl">Zip Code</label>
+                    <input type="number" placeholder="903101" id="code"
+                        class="border p-2 border-black rounded hover:border-blue-700"> <!-- 192500 585500 -->
 
-        <div>
+                </form>
 
-            <h1 class="text-center mt-6 mb-4 font-bold text-4xl">Delivery Method</h1>
-
-            <p class="font-bold text-lg">How do you want your order delivered?</p>
-
-            <div class="flex">
-
-                <input type="radio">
-                <p class="ml-2 text-xl">Door Delivery</p>
+                <div class="flex justify-center mt-6">
+                    <button class="px-6 py-2 bg-black text-white rounded font-bold tracking-wider">Save</button>
+                </div>
 
             </div>
 
-            <p class="pl-6 mb-6">Delivered between Monday 22 Mar and Tuesday 23 Mar for <span>&#8358;</span> 1500</p>
-
-            <div class="flex">
-
-                <input type="radio">
-                <p class="ml-2 text-xl">Pickup Station</p>
-
+            <div class="hidden md:block">
+                <img src="../GetDPhone/img/Line.png" alt="">
             </div>
 
-            <p class="pl-6">Ready for pickup on Saturday 20 Mar</p>
+            <div class="ml-6">
+
+                <h1 class="text-center mt-6 mb-10 font-bold text-4xl">Delivery Method</h1>
+
+                <p class="font-bold text-lg mb-4">How do you want your order delivered?</p>
+
+                <div>
+
+                    <div class="flex">
+
+                        <input type="radio" id="default-radio-1" name="default-radio">
+                        <label class="ml-2 text-xl" for="default-radio-1">Door Delivery</label>
+
+                    </div>
+
+                    <p class="pl-6 mb-6">Delivered between Monday 22 Mar and Tuesday 23 Mar for <span>&#8358;</span>
+                        1500
+                    </p>
+
+                    <div class="flex">
+
+                        <input type="radio" id="default-radio-2" name="default-radio">
+                        <label class="ml-2 text-xl" for="default-radio-2">Pickup Station</label>
+
+                    </div>
+
+                    <p class="pl-6">Ready for pickup on Saturday 20 Mar</p>
 
 
+                </div>
+            </div>
         </div>
 
         <div class="flex justify-center mt-6">
-            <button class="px-10 py-2 mt-10 bg-black text-white rounded font-bold tracking-wider text-xl">Continue to
+            <button class="px-16 py-2 mt-10 bg-black text-white rounded font-bold tracking-wider text-xl">Continue to
                 Payment</button>
         </div>
+
 
     </section>
 
