Refactored file to update a button

--- a/checkout(shipping).html
+++ b/checkout(shipping).html
@@ -17,7 +17,9 @@
             }
         }
     </script>
+
     <title>Checkout (Shipping)</title>
+
 </head>
 
 <body class="font-Gorditas">
@@ -140,8 +142,7 @@
         </div>
 
         <div class="flex justify-center mt-6">
-            <button class="px-16 py-2 mt-10 bg-black text-white rounded font-bold tracking-wider text-xl">Continue to
-                Payment</button>
+            <button class="px-16 py-2 mt-10 bg-black text-white rounded font-bold tracking-wider text-xl">Continue to Payment</button>
         </div>
 
 
