--- a/checkout(payment).html
+++ b/checkout(payment).html
@@ -17,17 +17,101 @@
             }
         }
     </script>
-    <title>Checkout (Shipping)</title>
+    <title>Checkout (Payment)</title>
 </head>
 
 <body class="font-Gorditas">
 
+    <section class="mx-2 sm:mx-10 mt-16">
+
+        <div class="flex justify-between text-lg border-b border-black mb-6 sm:text-2xl lg:text-3xl">
+            <h1 class="text-gray-400">Shipping</h1>
+            <h1 class="font-bold border-b-4 border-black">Payment</h1>
+            <h1 class="text-gray-400">Confirmation</h1>
+        </div>
+
+        <h1 class="mt-4 mb-10 font-bold text-2xl sm:text-4xl">Choose Payment Method</h1>
+
+        <div class="flex">
+            <div class="bg-gray-300 w-32 h-24 md:w-40 md:h-28 flex flex-col justify-center items-center mr-2">
+                <img src="../GetDPhone/img/credit-card.png" alt="" class="w-12 h-12">
+                <p class="font-bold text-sm mt-2 md:text-lg">Credit Card</p>
+            </div>
+            <div class="bg-gray-100 w-32 h-24 md:w-40 md:h-28 flex flex-col justify-center items-center mr-2">
+                <img src="../GetDPhone/img/icons/PayOnDelivery.png" alt="">
+                <p class="font-bold text-sm mt-2 md:text-lg">Pay on Delivery</p>
+            </div>
+            <div class="bg-gray-100 w-32 h-24 md:w-40 md:h-28 flex flex-col justify-center items-center">
+                <img src="../GetDPhone/img/bitcoin.png" alt="">
+                <p class="font-bold text-sm md:text-lg mt-2">Bitcoin</p>
+            </div>
+        </div>
+
+        <form action="#" class="flex flex-col mt-14 md:w-1/2">
+
+            <label for="card" class="mb-2 text-xl">Credit Card Number</label>
+            <input type="number" placeholder="5399 811 9111 5555" id="card"
+                class="border border-black rounded hover:border-blue-700 p-2 mb-4">
+
+            <label for="name" class="mb-2 text-xl">Card Holder Name</label>
+            <input type="text" placeholder="Holder's name" id="name"
+                class="border p-2 border-black rounded hover:border-blue-700 mb-4">
+
+            <label for="year" class="mb-2 text-xl">Expiry Year</label>
+            <select name="year" id="year" class="border p-2 border-black rounded hover:border-blue-700 mb-4">
+                <option value="">2022</option>
+                <option value="">2023</option>
+                <option value="">2024</option>
+                <option value="">2025</option>
+                <option value="">2026</option>
+                <option value="">2027</option>
+                <option value="">2028</option>
+                <option value="">2029</option>
+                <option value="">2030</option>
+            </select>
+
+            <label for="month" class="mb-2 text-xl">Expiry Month</label>
+            <select name="month" id="month" class="border p-2 border-black rounded hover:border-blue-700 mb-4">
+                <option value="">January</option>
+                <option value="">February</option>
+                <option value="">March</option>
+                <option value="">April</option>
+                <option value="">May</option>
+                <option value="">June</option>
+                <option value="">July</option>
+                <option value="">August</option>
+                <option value="">September</option>
+                <option value="">October</option>
+                <option value="">November</option>
+                <option value="">December</option>
+            </select>
+
+            <label for="code" class="mb-2 text-xl">CVV</label>
+            <input type="number" placeholder="XXX" id="code"
+                class="border p-2 border-black rounded hover:border-blue-700"> <!-- 192500 585500 -->
+            <P class="text-gray-400 italic text-sm">Number at the end of the card</P>
+
+        </form>
+
+        <div class="flex mt-4">
+            <input type="checkbox">
+            <p class="ml-2">Save card for later</p>
+        </div>
+
+        <div class="flex justify-center mt-6">
+            <button class="px-16 py-2 mt-10 bg-black text-white rounded font-bold tracking-wider text-xl">Comfirm your order</button>
+        </div>
+
+        </div>
+
+
+    </section>
 
     <!-- Footer -->
 
     <footer class="bg-gray-900 text-gray-100">
 
-        <div class="flex flex-col lg:flex-row justify-between mt-40 px-12 py-8">
+        <div class="flex flex-col lg:flex-row justify-between mt-60 px-12 py-8">
 
             <div class="">
                 <h1 class="font-bold text-4xl mb-6 lg:mb-0">getdphone</h1>
