Implented a new section

--- a/checkout(confirmation).html
+++ b/checkout(confirmation).html
@@ -22,6 +22,8 @@
 
 <body class="font-Gorditas">
 
+    <!-- Confirmation Section -->
+
     <section class="mx-2 sm:mx-10 mt-16">
 
         <div class="flex justify-between text-lg border-b border-black mb-6 sm:text-2xl lg:text-3xl">
@@ -30,7 +32,38 @@
             <h1 class="font-bold border-b-4 border-black">Confirmation</h1>
         </div>
 
+        <div class="flex items-center lg:w-1/2 justify-between">
+            <img src="../GetDPhone/img/good.png" alt="" class="w-20 h-20">
+
+            <div class="ml-10">
+                <p class="text-lg sm:text-2xl mb-4">Order 10101010</p>
+                <p class="font-bold text-xl sm:text-4xl">Thank You, Kenny</p>
+            </div>
+        </div>
+
+        <div class="mt-16">
+            <p class="font-bold">Yoy Order is confirmed.</p>
+            <p class="font-bold">We have accepted your order and we are getting it ready</p>
+
+            <p class="font-bold mt-14 mb-4">Customer Information</p>
+
+            <p class="font-bold">Billing Address</p>
+            <p class="text-sm">Kenny Bostick</p>
+            <p class="text-sm">Suite 27 Yasuha Plaza</p>
+            <p class="text-sm">Wuse 2 Abuja</p>
+
+            <p class="font-bold mt-10 mb-4">Shipping Method</p>
+
+            <p class="mb-4 text-sm">Door Delivery</p>
+
+            <P class="font-bold mb-4">Payment Method</P>
+
+            <p class="text-sm">Ending in 3217 - N500,000</p>
+        </div>
+
     </section>
+
+    <!-- Confirmation Section ends -->
 
     <!-- Footer -->
 
