--- a/signup.html
+++ b/signup.html
@@ -236,7 +236,7 @@
                 <p class="text-lg">Subscribe to our newsletter and be <br> the first to know about our updates</p>
 
                 <div class="mt-4">
-                    <input type="text" class="rounded p-2" placeholder="Email Address">
+                    <input type="text" class="rounded p-2 text-black" placeholder="Email Address">
                     <button class="bg-gray-100 text-blue-400 font-bold rounded p-2 mt-2 sm:mt-0">Subscribe</button>
                 </div>
 
