Refactored file to a link to an h2 element

--- a/login.html
+++ b/login.html
@@ -80,7 +80,7 @@
                 <h2 class="text-xl sm:text-3xl mr-20 md:mr-20 sm:mr-40 border-b-2 border-red-500 cursor-pointer">LOGIN
                 </h2>
 
-                <h2 class="text-xl sm:text-3xl text-gray-300 cursor-pointer">SIGNUP</h2>
+                <a href="signup.html"> <h2 class="text-xl sm:text-3xl text-gray-300">SIGNUP</h2></a>
 
             </div>
 
