--- a/signup.html
+++ b/signup.html
@@ -77,7 +77,7 @@
 
             <div class="flex font-bold">
 
-                <h2 class="text-xl sm:text-3xl text-gray-300 cursor-pointer mr-20 md:mr-20 sm:mr-40 ">LOGIN</h2>
+               <a href="login.html"> <h2 class="text-xl sm:text-3xl text-gray-300 mr-20 md:mr-20 sm:mr-40 ">LOGIN</h2> </a>
 
                 <h2 class="text-xl sm:text-3xl border-b-2 border-red-500 cursor-pointer">SIGNUP
                 </h2>
