--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <nav class="hidden md:flex md:justify-between md:items-center font-Gorditas font-bold">
 
             <div>
-                <a class="p-4 md:text-base" href="index.html">Home</a>
+                <a class="p-4 md:text-base bg-gray-200" href="index.html">Home</a>
             </div>
 
             <div>
