Refactored file to add a background color to a link

--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
             </div>
 
             <div>
-                <a class="p-4 md:text-base" href="about.html">About Us</a>
+                <a class="p-4 md:text-base bg-gray-200" href="about.html">About Us</a>
             </div>
 
             <div>
