--- a/contactUs.html
+++ b/contactUs.html
@@ -59,7 +59,7 @@
             </div>
 
             <div>
-                <a class="p-4 md:text-base" href="contactUs.html">Contact Us</a>
+                <a class="p-4 md:text-base bg-gray-200" href="contactUs.html">Contact Us</a>
             </div>
 
             <div class="flex px-10 items-center">
