Refactored file to add width and height on medium screen size, corrected a spelling error

--- a/checkout(confirmation).html
+++ b/checkout(confirmation).html
@@ -33,7 +33,7 @@
         </div>
 
         <div class="flex items-center lg:w-1/2 justify-between">
-            <img src="../GetDPhone/img/good.png" alt="" class="w-20 h-20">
+            <img src="../GetDPhone/img/good.png" alt="" class="w-20 h-20 md:w-40 md:h-40">
 
             <div class="ml-10">
                 <p class="text-lg sm:text-2xl mb-4">Order 10101010</p>
@@ -42,7 +42,7 @@
         </div>
 
         <div class="mt-16">
-            <p class="font-bold">Yoy Order is confirmed.</p>
+            <p class="font-bold">Your Order is confirmed.</p>
             <p class="font-bold">We have accepted your order and we are getting it ready</p>
 
             <p class="font-bold mt-14 mb-4">Customer Information</p>
