Refactored file to add a link to an anchor tag

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
                                 <li>
 
-                                    <a href="#"
+                                    <a href="productInventory(Iphone).html"
                                         class="flex p-2 font-medium text-gray-600 rounded-md hover:bg-gray-100 hover:text-black">Product
                                         Inventory
                                     </a>
