--- a/signup.html
+++ b/signup.html
@@ -11,59 +11,118 @@
 
 <body class="font-Gorditas">
 
-    <!-- HEADER SECTION-->
+     <!-- navbar -->
 
-    <header class="w-full flex justify-between items-center sticky top-0 bg-gray-100">
+     <nav class="bg-gray-100 md:sticky md:top-0" x-data="{navbarOpen:false}">
 
-        <div class="p-4">
-            <h1 class="font-bold font-Lacquer text-xl">getdphone</h1>
-        </div>
+        <div class="container mx-auto py-2 px-4 md:flex md:justify-between">
 
-        <div class="px-4 cursor-pointer md:hidden">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
-                stroke="currentColor" stroke-width="2">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16" />
-            </svg>
-        </div>
+            <div class="flex md:inline-flex">
 
-        <nav class="hidden md:flex md:justify-between md:items-center font-Gorditas font-bold">
+                <a href="#" class="inline-flex p-2 font-bold font-Lacquer text-xl">getdphone</a>
 
-            <div>
-                <a class="p-4 md:text-base" href="index.html">Home</a>
-            </div>
-
-            <div>
-                <a class="p-4 md:text-base" href="">Shop</a>
-            </div>
-
-            <div>
-                <a class="p-4 md:text-base" href="about.html">About Us</a>
-            </div>
-
-            <div>
-                <a class="p-4 md:text-base" href="contactUs.html">Contact Us</a>
-            </div>
-
-            <div class="flex px-10 items-center">
-
-                <a href="login.html">
-                    <button class="bg-black border rounded text-gray-100 py-1 px-8 text-base mr-4">Log in</button>
-                </a>
-
-                <a href="">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
-                        <path
-                            d="M3 1a1 1 0 000 2h1.22l.305 1.222a.997.997 0 00.01.042l1.358 5.43-.893.892C3.74 11.846 4.632 14 6.414 14H15a1 1 0 000-2H6.414l1-1H14a1 1 0 00.894-.553l3-6A1 1 0 0017 3H6.28l-.31-1.243A1 1 0 005 1H3zM16 16.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zM6.5 18a1.5 1.5 0 100-3 1.5 1.5 0 000 3z" />
+                <button class="inline-flex items-center justify-center border h-8 w-8 rounded-md md:hidden ml-auto"
+                    @click="navbarOpen = !navbarOpen">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
+                        stroke="currentColor" stroke-width="2">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16" />
                     </svg>
-                </a>
+                </button>
 
             </div>
 
-        </nav>
+            <div class="md:inline-flex md:w-auto mt-2 md:mt-0 px-4" :class="{'hidden':!navbarOpen, 'flex':navbarOpen}">
 
-    </header>
+                <ul class="flex md:flex-row md:space-x-2 flex-col mb-2 w-full md:w-auto space-y-2 md:space-y-0">
 
-    <!-- HEADER END -->
+                    <li>
+                        <a class="flex px-4 py-2 font-medium hover:bg-gray-300 rounded-md"
+                            href="index.html">Home</a>
+                    </li>
+
+                    <li class="relative" x-data="{dropdownOpen:false}">
+
+                        <div class="hover:bg-gray-300 rounded-md">
+
+                            <button class="w-full items-center">
+
+                                <a class="flex px-4 py-2 font-medium " href="#"
+                                    @click="dropdownOpen = !dropdownOpen">Shop
+
+                                    <img src="https://img.icons8.com/external-tanah-basah-basic-outline-tanah-basah/19/000000/external-chevron-arrows-tanah-basah-basic-outline-tanah-basah-4.png"
+                                        class="w-4 h-4 mt-1 ml-auto" />
+
+                                </a>
+
+                            </button>
+
+                        </div>
+
+                        <div class="md:absolute bg-blue-100 rounded-md p-2"
+                            :class="{'hidden':!dropdownOpen,'flex flex-col':dropdownOpen}"
+                            @click.away="dropdownOpen = false">
+
+                            <ul class="md:w-64 w-full">
+
+                                <li>
+
+                                    <a href="productInventory(Iphone).html"
+                                        class="flex p-2 font-medium text-gray-600 rounded-md hover:bg-gray-100 hover:text-black">Product
+                                        Inventory
+                                    </a>
+
+                                </li>
+
+                            </ul>
+
+                        </div>
+
+                    </li>
+
+                    <li>
+
+                        <a class="flex px-4 py-2 font-medium hover:bg-gray-300 rounded-md" href="about.html">About Us
+                        </a>
+
+                    </li>
+
+                    <li>
+
+                        <a class="flex px-4 py-2 font-medium hover:bg-gray-300 rounded-md" href="contactUs.html">Contact
+                            Us
+                        </a>
+
+                    </li>
+
+                    <li class="flex items-center space-x-6 md:space-x-2">
+
+                        <a href="login.html">
+
+                            <button class="bg-black border rounded text-gray-100 py-1 px-8 text-base ">Log in</button>
+
+                        </a>
+
+                        <a href="">
+
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20"
+                                fill="currentColor">
+                                <path
+                                    d="M3 1a1 1 0 000 2h1.22l.305 1.222a.997.997 0 00.01.042l1.358 5.43-.893.892C3.74 11.846 4.632 14 6.414 14H15a1 1 0 000-2H6.414l1-1H14a1 1 0 00.894-.553l3-6A1 1 0 0017 3H6.28l-.31-1.243A1 1 0 005 1H3zM16 16.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zM6.5 18a1.5 1.5 0 100-3 1.5 1.5 0 000 3z" />
+                            </svg>
+
+                        </a>
+
+                    </li>
+
+                </ul>
+
+            </div>
+
+        </div>
+        
+    </nav>
+
+    <!-- navbar end -->
 
     <!-- SIGNUP SECTION -->
 
@@ -270,6 +329,8 @@
 
     </footer>
     <!-- footer end -->
+
+    <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.8.2/dist/alpine.min.js" defer></script>
 
 </body>
 
