--- a/productInventory(Huawei).html
+++ b/productInventory(Huawei).html
@@ -59,8 +59,7 @@
                 <ul class="flex md:flex-row md:space-x-2 flex-col mb-2 w-full md:w-auto space-y-2 md:space-y-0">
 
                     <li>
-                        <a class="flex px-4 py-2 font-medium hover:bg-gray-300 rounded-md"
-                            href="index.html">Home</a>
+                        <a class="flex px-4 py-2 font-medium hover:bg-gray-300 rounded-md" href="index.html">Home</a>
                     </li>
 
                     <li class="relative" x-data="{dropdownOpen:false}">
@@ -142,7 +141,7 @@
             </div>
 
         </div>
-        
+
     </nav>
 
     <!-- navbar end -->
@@ -175,9 +174,10 @@
     </section>
 
     <div class="flex justify-end font-Gorditas font-medium mr-4">
-        
+
         <p class="mr-2">Sort By: Featured </p>
-        <img src="https://img.icons8.com/external-tanah-basah-basic-outline-tanah-basah/19/000000/external-chevron-arrows-tanah-basah-basic-outline-tanah-basah-4.png"/>
+        <img
+            src="https://img.icons8.com/external-tanah-basah-basic-outline-tanah-basah/19/000000/external-chevron-arrows-tanah-basah-basic-outline-tanah-basah-4.png" />
 
     </div>
 
@@ -241,7 +241,8 @@
 
                     <div class="bg-white font-Gorditas mb-4 md:mb-0 md:mr-2">
 
-                        <img src="../GetDPhone/img/Huawei/Huawei Mate 40 Pro+.png" alt="" class="">
+                        <a href="products(Huawei).html"> <img src="../GetDPhone/img/Huawei/Huawei Mate 40 Pro+.png" alt=""
+                                class=""> </a>
 
                         <h2 class="text-center font-bold xl:font-medium md:text-lg text-xl xl:text-2xl mt-2">Huawei Mate
                             40 Pro+
@@ -251,9 +252,9 @@
 
                         <div class="flex justify-center">
 
-                            <button
-                                class="text-center mt-2 text-white bg-button font-bold uppercase rounded-full mb-1 py-2 px-3 text-sm">Buy
-                                Now</button>
+                            <a href="products(Huawei).html"> <button
+                                    class="text-center mt-2 text-white bg-button font-bold uppercase rounded-full mb-1 py-2 px-3 text-sm">Buy
+                                    Now</button> </a>
 
                         </div>
 
