--- a/products(Huawei).html
+++ b/products(Huawei).html
@@ -58,8 +58,7 @@
                 <ul class="flex md:flex-row md:space-x-2 flex-col mb-2 w-full md:w-auto space-y-2 md:space-y-0">
 
                     <li>
-                        <a class="flex px-4 py-2 font-medium hover:bg-gray-300 rounded-md"
-                            href="index.html">Home</a>
+                        <a class="flex px-4 py-2 font-medium hover:bg-gray-300 rounded-md" href="index.html">Home</a>
                     </li>
 
                     <li class="relative" x-data="{dropdownOpen:false}">
@@ -141,7 +140,7 @@
             </div>
 
         </div>
-        
+
     </nav>
 
     <!-- navbar end -->
@@ -214,7 +213,7 @@
 
                     <div class="rounded-full bg-colorh w-6 h-6 mr-2"></div>
                     <div class="rounded-full bg-colorw w-6 h-6 mr-2"></div>
-    
+
                 </div>
 
                 <p class="mt-10">Condition</p>
@@ -233,8 +232,9 @@
 
                     <p class="text-4xl font-bold mb-2">N500,000</p>
 
-                    <button class="bg-black text-white px-20 py-1 lg:py-2 rounded font-bold text-xl lg:text-base">Add to
-                        Cart</button>
+                    <a href="cart(Huawei).html"> <button
+                            class="bg-black text-white px-20 py-1 lg:py-2 rounded font-bold text-xl lg:text-base">Add to
+                            Cart</button> </a>
 
                 </div>
 
