Refactored file to add an anchor tag

--- a/checkout(confirmation).html
+++ b/checkout(confirmation).html
@@ -27,9 +27,19 @@
     <section class="mx-2 sm:mx-10 mt-16">
 
         <div class="flex justify-between text-lg border-b border-black mb-6 sm:text-2xl lg:text-3xl">
-            <h1 class="text-gray-400">Shipping</h1>
-            <h1 class="text-gray-400">Payment</h1>
-            <h1 class="font-bold border-b-4 border-black">Confirmation</h1>
+
+            <a href="checkout(shipping).html">
+                <h1 class="text-gray-400">Shipping</h1>
+            </a>
+
+            <a href="checkout(payment).html">
+                <h1 class="text-gray-400">Payment</h1>
+            </a>
+
+            <a href="checkout(confirmation).html">
+                <h1 class="font-bold border-b-4 border-black">Confirmation</h1>
+            </a>
+            
         </div>
 
         <div class="flex items-center lg:w-1/2 justify-between">
