--- a/checkout(payment).html
+++ b/checkout(payment).html
@@ -25,9 +25,19 @@
     <section class="mx-2 sm:mx-10 mt-16">
 
         <div class="flex justify-between text-lg border-b border-black mb-6 sm:text-2xl lg:text-3xl">
-            <h1 class="text-gray-400">Shipping</h1>
-            <h1 class="font-bold border-b-4 border-black">Payment</h1>
-            <h1 class="text-gray-400">Confirmation</h1>
+
+            <a href="checkout(shipping).html">
+                <h1 class="text-gray-400">Shipping</h1>
+            </a>
+
+            <a href="checkout(payment).html">
+                <h1 class="font-bold border-b-4 border-black">Payment</h1>
+            </a>
+
+            <a href="checkout(confirmation).html">
+                <h1 class="text-gray-400">Confirmation</h1>
+            </a>
+
         </div>
 
         <h1 class="mt-4 mb-10 font-bold text-2xl sm:text-4xl">Choose Payment Method</h1>
