--- a/checkout(shipping).html
+++ b/checkout(shipping).html
@@ -29,9 +29,19 @@
     <section class="mx-2 sm:mx-10 mt-16">
 
         <div class="flex justify-between text-lg border-b border-black mb-6 sm:text-2xl lg:text-3xl">
-            <h1 class="font-bold border-b-4 border-black">Shipping</h1>
-            <h1 class="text-gray-400">Payment</h1>
-            <h1 class="text-gray-400">Confirmation</h1>
+
+            <a href="checkout(shipping).html">
+                <h1 class="font-bold border-b-4 border-black">Shipping</h1>
+            </a>
+
+            <a href="checkout(payment).html">
+                <h1 class="text-gray-400">Payment</h1>
+            </a>
+
+            <a href="checkout(confirmation).html">
+                <h1 class="text-gray-400">Confirmation</h1>
+            </a>
+            
         </div>
 
         <div class="flex flex-col md:flex-row justify-between">
@@ -142,7 +152,8 @@
         </div>
 
         <div class="flex justify-center mt-6">
-            <button class="px-16 py-2 mt-10 bg-black text-white rounded font-bold tracking-wider text-xl">Continue to Payment</button>
+            <button class="px-16 py-2 mt-10 bg-black text-white rounded font-bold tracking-wider text-xl">Continue to
+                Payment</button>
         </div>
 
 
