Refactored file to add an anchor tag on a button tag

--- a/checkout(payment).html
+++ b/checkout(payment).html
@@ -109,7 +109,9 @@
         </div>
 
         <div class="flex justify-center mt-6">
-            <button class="px-16 py-2 mt-10 bg-black text-white rounded font-bold tracking-wider text-xl">Comfirm your order</button>
+            <a href="checkout(confirmation).html"> <button
+                    class="px-16 py-2 mt-10 bg-black text-white rounded font-bold tracking-wider text-xl">Comfirm your
+                    order</button></a>
         </div>
 
         </div>
