--- a/checkout(shipping).html
+++ b/checkout(shipping).html
@@ -41,7 +41,7 @@
             <a href="checkout(confirmation).html">
                 <h1 class="text-gray-400">Confirmation</h1>
             </a>
-            
+
         </div>
 
         <div class="flex flex-col md:flex-row justify-between">
@@ -152,8 +152,9 @@
         </div>
 
         <div class="flex justify-center mt-6">
-            <button class="px-16 py-2 mt-10 bg-black text-white rounded font-bold tracking-wider text-xl">Continue to
-                Payment</button>
+            <a href="checkout(payment).html"> <button
+                    class="px-16 py-2 mt-10 bg-black text-white rounded font-bold tracking-wider text-xl">Continue to
+                    Payment</button></a>
         </div>
 
 
