--- a/checkout(confirmation).html
+++ b/checkout(confirmation).html
@@ -39,11 +39,11 @@
             <a href="checkout(confirmation).html">
                 <h1 class="font-bold border-b-4 border-black">Confirmation</h1>
             </a>
-            
+
         </div>
 
         <div class="flex items-center lg:w-1/2 justify-between">
-            <img src="../GetDPhone/img/good.png" alt="" class="w-20 h-20 md:w-40 md:h-40">
+            <img src="./assets/img/good.png" alt="" class="w-20 h-20 md:w-40 md:h-40">
 
             <div class="ml-10">
                 <p class="text-lg sm:text-2xl mb-4">Order 10101010</p>
@@ -171,16 +171,16 @@
 
             <div class="flex">
                 <a href="">
-                    <img src="../GetDPhone/img/Footer icons/youtube.png" alt="" class="h-6 w-6 mr-2"> </a>
+                    <img src="./assets/img/Footer icons/youtube.png" alt="" class="h-6 w-6 mr-2"> </a>
 
                 <a href="">
-                    <img src="../GetDPhone/img/Footer icons/instagram.png" alt="" class="h-6 w-6 mr-2"></a>
+                    <img src="./assets/img/Footer icons/instagram.png" alt="" class="h-6 w-6 mr-2"></a>
 
                 <a href="">
-                    <img src="../GetDPhone/img/Footer icons/facebook.png" alt="" class="h-6 w-6 mr-2"> </a>
+                    <img src="./assets/img/Footer icons/facebook.png" alt="" class="h-6 w-6 mr-2"> </a>
 
                 <a href="">
-                    <img src="../GetDPhone/img/Footer icons/twitter.png" alt="" class="h-6 w-6"> </a>
+                    <img src="./assets/img/Footer icons/twitter.png" alt="" class="h-6 w-6"> </a>
             </div>
 
         </div>
