--- a/checkout(payment).html
+++ b/checkout(payment).html
@@ -44,15 +44,15 @@
 
         <div class="flex">
             <div class="bg-gray-300 w-32 h-24 md:w-40 md:h-28 flex flex-col justify-center items-center mr-2">
-                <img src="../GetDPhone/img/credit-card.png" alt="" class="w-12 h-12">
+                <img src="./assets/img/credit-card.png" alt="" class="w-12 h-12">
                 <p class="font-bold text-sm mt-2 md:text-lg">Credit Card</p>
             </div>
             <div class="bg-gray-100 w-32 h-24 md:w-40 md:h-28 flex flex-col justify-center items-center mr-2">
-                <img src="../GetDPhone/img/icons/PayOnDelivery.png" alt="">
+                <img src="./assets/img/icons/PayOnDelivery.png" alt="">
                 <p class="font-bold text-sm mt-2 md:text-lg">Pay on Delivery</p>
             </div>
             <div class="bg-gray-100 w-32 h-24 md:w-40 md:h-28 flex flex-col justify-center items-center">
-                <img src="../GetDPhone/img/bitcoin.png" alt="">
+                <img src="./assets/img/bitcoin.png" alt="">
                 <p class="font-bold text-sm md:text-lg mt-2">Bitcoin</p>
             </div>
         </div>
@@ -215,16 +215,16 @@
 
             <div class="flex">
                 <a href="">
-                    <img src="../GetDPhone/img/Footer icons/youtube.png" alt="" class="h-6 w-6 mr-2"> </a>
+                    <img src="./assets/img/Footer icons/youtube.png" alt="" class="h-6 w-6 mr-2"> </a>
 
                 <a href="">
-                    <img src="../GetDPhone/img/Footer icons/instagram.png" alt="" class="h-6 w-6 mr-2"></a>
+                    <img src="./assets/img/Footer icons/instagram.png" alt="" class="h-6 w-6 mr-2"></a>
 
                 <a href="">
-                    <img src="../GetDPhone/img/Footer icons/facebook.png" alt="" class="h-6 w-6 mr-2"> </a>
+                    <img src="./assets/img/Footer icons/facebook.png" alt="" class="h-6 w-6 mr-2"> </a>
 
                 <a href="">
-                    <img src="../GetDPhone/img/Footer icons/twitter.png" alt="" class="h-6 w-6"> </a>
+                    <img src="./assets/img/Footer icons/twitter.png" alt="" class="h-6 w-6"> </a>
             </div>
 
         </div>
