--- a/checkout(shipping).html
+++ b/checkout(shipping).html
@@ -115,7 +115,7 @@
             </div>
 
             <div class="hidden md:block">
-                <img src="../GetDPhone/img/Line.png" alt="">
+                <img src="./assets/img/Line.png" alt="">
             </div>
 
             <div class="ml-6">
@@ -259,16 +259,16 @@
 
             <div class="flex">
                 <a href="">
-                    <img src="../GetDPhone/img/Footer icons/youtube.png" alt="" class="h-6 w-6 mr-2"> </a>
+                    <img src="./assets/img/Footer icons/youtube.png" alt="" class="h-6 w-6 mr-2"> </a>
 
                 <a href="">
-                    <img src="../GetDPhone/img/Footer icons/instagram.png" alt="" class="h-6 w-6 mr-2"></a>
+                    <img src="./assets/img/Footer icons/instagram.png" alt="" class="h-6 w-6 mr-2"></a>
 
                 <a href="">
-                    <img src="../GetDPhone/img/Footer icons/facebook.png" alt="" class="h-6 w-6 mr-2"> </a>
+                    <img src="./assets/img/Footer icons/facebook.png" alt="" class="h-6 w-6 mr-2"> </a>
 
                 <a href="">
-                    <img src="../GetDPhone/img/Footer icons/twitter.png" alt="" class="h-6 w-6"> </a>
+                    <img src="./assets/img/Footer icons/twitter.png" alt="" class="h-6 w-6"> </a>
             </div>
 
         </div>
