--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 
         </div>
         <div class="lg:bg-yellow-400 hidden sm:block">
-            <img class="" src="../GetDPhone/img/usedphone.png" alt="">
+            <img class="" src="./assets/img/usedphone.png" alt="">
         </div>
     </section>
 
@@ -180,7 +180,7 @@
 
             <div class="flex flex-col lg:flex-row mt-10 mx-10">
                 <div class="bg-gray-100 flex items-center flex-col pt-4 lg:pt-6 mb-10 lg:mr-10">
-                    <img class="mb-4" src="../GetDPhone/img/icons/PayOnDelivery.png" alt="">
+                    <img class="mb-4" src="./assets/img/icons/PayOnDelivery.png" alt="">
                     <h1 class="font-bold text-2xl">Pay on Delivery</h1>
                     <p class="text-center p-4">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore soluta
                         dolores expedita ea esse corporis ipsam nam numquam blanditiis ducimus sit sapiente, minima
@@ -188,7 +188,7 @@
                 </div>
 
                 <div class="bg-gray-100 flex items-center flex-col pt-4 mb-10 lg:mr-10">
-                    <img class="mb-4" src="../GetDPhone/img/icons/ReturnPolicy.png" alt="">
+                    <img class="mb-4" src="./assets/img/icons/ReturnPolicy.png" alt="">
                     <h1 class="font-bold text-2xl">Return Policy</h1>
                     <p class="text-center p-4">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore soluta
                         dolores expedita ea esse corporis ipsam nam numquam blanditiis ducimus sit sapiente, minima
@@ -196,7 +196,7 @@
                 </div>
 
                 <div class="bg-gray-100 flex items-center flex-col pt-4 mb-10">
-                    <img class="mb-4" src="../GetDPhone/img/icons/100%Guarantee.png" alt="">
+                    <img class="mb-4" src="./assets/img/icons/100%Guarantee.png" alt="">
                     <h1 class="font-bold text-2xl">100% guaranteed</h1>
                     <p class="text-center p-4">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore soluta
                         dolores expedita ea esse corporis ipsam nam numquam blanditiis ducimus sit sapiente, minima
@@ -221,19 +221,19 @@
 
             <div class="flex flex-row mb-4 justify-center items-center">
                 <div class="">
-                    <img class="mb-4" src="../GetDPhone/img/FeaturedPhones/Apple iPhone 11 Pro Max.png" alt="">
+                    <img class="mb-4" src="./assets/img/FeaturedPhones/Apple iPhone 11 Pro Max.png" alt="">
                     <h1 class="text-center font-bold mt-2">APPLE iPhone 11 Pro Max</h1>
 
                 </div>
 
                 <div class="">
-                    <img class="mb-4" src="../GetDPhone/img/FeaturedPhones/Samsung S20.png" alt="">
+                    <img class="mb-4" src="./assets/img/FeaturedPhones/Samsung S20.png" alt="">
                     <h1 class="text-center font-bold mt-2">SAMSUNG 20</h1>
 
                 </div>
 
                 <div class="">
-                    <img class="" src="../GetDPhone/img/FeaturedPhones/Huawei Mate 40 Pro.png" alt="">
+                    <img class="" src="./assets/img/FeaturedPhones/Huawei Mate 40 Pro.png" alt="">
                     <h1 class="text-center font-bold mt-3">HUAWEI Mate 40 Pro</h1>
                 </div>
 
@@ -269,7 +269,7 @@
                         </p>
 
                         <div class="mt-2">
-                            <img class="w-12 h-12" src="../GetDPhone/img/testimonial.png" alt="">
+                            <img class="w-12 h-12" src="./assets/img/testimonial.png" alt="">
                         </div>
 
                         <div>
@@ -301,7 +301,7 @@
                     NOW</button>
             </div>
             <div class="w-full">
-                <img src="../GetDPhone/img/MultipleSamsungPhone.png" alt="">
+                <img src="./assets/img/MultipleSamsungPhone.png" alt="">
             </div>
         </section>
 
@@ -385,16 +385,16 @@
 
                 <div class="flex">
                     <a href="">
-                        <img src="../GetDPhone/img/Footer icons/youtube.png" alt="" class="h-6 w-6 mr-2"> </a>
+                        <img src="./assets/img/Footer icons/youtube.png" alt="" class="h-6 w-6 mr-2"> </a>
 
                     <a href="">
-                        <img src="../GetDPhone/img/Footer icons/instagram.png" alt="" class="h-6 w-6 mr-2"></a>
+                        <img src="./assets/img/Footer icons/instagram.png" alt="" class="h-6 w-6 mr-2"></a>
 
                     <a href="">
-                        <img src="../GetDPhone/img/Footer icons/facebook.png" alt="" class="h-6 w-6 mr-2"> </a>
+                        <img src="./assets/img/Footer icons/facebook.png" alt="" class="h-6 w-6 mr-2"> </a>
 
                     <a href="">
-                        <img src="../GetDPhone/img/Footer icons/twitter.png" alt="" class="h-6 w-6"> </a>
+                        <img src="./assets/img/Footer icons/twitter.png" alt="" class="h-6 w-6"> </a>
                 </div>
             </div>
 
