--- a/productInventory(Huawei).html
+++ b/productInventory(Huawei).html
@@ -241,7 +241,7 @@
 
                     <div class="bg-white font-Gorditas mb-4 md:mb-0 md:mr-2">
 
-                        <a href="products(Huawei).html"> <img src="../GetDPhone/img/Huawei/Huawei Mate 40 Pro+.png" alt=""
+                        <a href="products(Huawei).html"> <img src="./assets/img/Huawei/Huawei Mate 40 Pro+.png" alt=""
                                 class=""> </a>
 
                         <h2 class="text-center font-bold xl:font-medium md:text-lg text-xl xl:text-2xl mt-2">Huawei Mate
@@ -262,7 +262,7 @@
 
                     <div class="bg-white font-Gorditas mb-4 md:mb-0 md:mr-2">
 
-                        <img src="../GetDPhone/img/Huawei/Huawei Mate 40 Pro.png" alt="" class="">
+                        <img src="./assets/img/Huawei/Huawei Mate 40 Pro.png" alt="" class="">
 
                         <h2 class="text-center font-bold xl:font-medium text-xl xl:text-2xl mt-2">Huawei Mate 40 Pro
                         </h2>
@@ -281,7 +281,7 @@
 
                     <div class="bg-white font-Gorditas">
 
-                        <img src="../GetDPhone/img/Huawei/Huawei Mate 40 Pro+.png" alt="" class="">
+                        <img src="./assets/img/Huawei/Huawei Mate 40 Pro+.png" alt="" class="">
 
                         <h2 class="text-center font-bold xl:font-medium text-xl xl:text-2xl mt-2">Huawei Mate 40</h2>
 
@@ -305,7 +305,7 @@
 
                     <div class="bg-white font-Gorditas mb-2 md:mb-0 md:mr-2">
 
-                        <img src="../GetDPhone/img/Huawei/Huawei Mate XS.png" alt="" class="">
+                        <img src="./assets/img/Huawei/Huawei Mate XS.png" alt="" class="">
 
                         <h2 class="text-center font-bold xl:font-medium text-xl xl:text-2xl mt-2">Huawei Mate XS</h2>
 
@@ -323,7 +323,7 @@
 
                     <div class="bg-white font-Gorditas mb-2 md:mb-0 md:mr-2">
 
-                        <img src="../GetDPhone/img/Huawei/Huawei Mate 30 Pro.png" alt="" class="">
+                        <img src="./assets/img/Huawei/Huawei Mate 30 Pro.png" alt="" class="">
 
                         <h2 class="text-center font-bold xl:font-medium text-xl xl:text-2xl mt-2">Huawei Mate 30 Pro
                         </h2>
@@ -342,7 +342,7 @@
 
                     <div class="bg-white font-Gorditas">
 
-                        <img src="../GetDPhone/img/Huawei/Huawei P30 Pro.png" alt="" class="">
+                        <img src="./assets/img/Huawei/Huawei P30 Pro.png" alt="" class="">
 
                         <h2 class="text-center font-bold xl:font-medium text-xl xl:text-2xl mt-2">Huawei P30 Pro</h2>
 
@@ -366,7 +366,7 @@
 
                     <div class="bg-white mb-2 font-Gorditas md:mb-0 md:mr-2">
 
-                        <img src="../GetDPhone/img/Huawei/Huawei P30.png" alt="" class="">
+                        <img src="./assets/img/Huawei/Huawei P30.png" alt="" class="">
 
                         <h2 class="text-center font-bold xl:font-medium text-xl xl:text-2xl mt-2">Huawei P30</h2>
 
@@ -384,7 +384,7 @@
 
                     <div class="bg-white mb-2 font-Gorditas md:mb-0 md:mr-2">
 
-                        <img src="../GetDPhone/img/Huawei/Huawei Mate 30 Pro++.png" alt="" class="">
+                        <img src="./assets/img/Huawei/Huawei Mate 30 Pro++.png" alt="" class="">
 
                         <h2 class="text-center font-bold xl:font-medium text-xl xl:text-2xl mt-2">Huawei Mate 30 Pro
                         </h2>
@@ -403,7 +403,7 @@
 
                     <div class="bg-white font-Gorditas">
 
-                        <img src="../GetDPhone/img/Huawei/Huawei P30 Pro.png" alt="" class="">
+                        <img src="./assets/img/Huawei/Huawei P30 Pro.png" alt="" class="">
 
                         <h2 class="text-center font-bold xl:font-medium text-xl xl:text-2xl mt-2">Huawei P30 Pro</h2>
 
@@ -427,7 +427,7 @@
 
                     <div class="bg-white mb-2 font-Gorditas md:mb-0 md:mr-2">
 
-                        <img src="../GetDPhone/img/Huawei/Huawei Y7a.png" alt="" class="">
+                        <img src="./assets/img/Huawei/Huawei Y7a.png" alt="" class="">
 
                         <h2 class="text-center font-bold xl:font-medium text-xl xl:text-2xl mt-2">Huawei Y7a</h2>
 
@@ -445,7 +445,7 @@
 
                     <div class="bg-white mb-2 font-Gorditas md:mb-0 md:mr-2">
 
-                        <img src="../GetDPhone/img/Huawei/Huawei Y8p.png" alt="" class="">
+                        <img src="./assets/img/Huawei/Huawei Y8p.png" alt="" class="">
 
                         <h2 class="text-center font-bold xl:font-medium text-xl xl:text-2xl mt-2">Huawei Y8p</h2>
 
@@ -463,7 +463,7 @@
 
                     <div class="bg-white font-Gorditas">
 
-                        <img src="../GetDPhone/img/Huawei/Huawei Y7p.png" alt="" class="">
+                        <img src="./assets/img/Huawei/Huawei Y7p.png" alt="" class="">
 
                         <h2 class="text-center font-bold xl:font-medium text-xl xl:text-2xl mt-2">Huawei Y7p</h2>
 
@@ -487,7 +487,7 @@
 
                     <div class="bg-white mb-2 font-Gorditas md:mb-0 md:mr-2">
 
-                        <img src="../GetDPhone/img/Huawei/Huawei Y6p.png" alt="" class="">
+                        <img src="./assets/img/Huawei/Huawei Y6p.png" alt="" class="">
 
                         <h2 class="text-center font-bold xl:font-medium text-xl xl:text-2xl mt-2">Huawei Y6p</h2>
 
@@ -505,7 +505,7 @@
 
                     <div class="bg-white mb-2 font-Gorditas md:mb-0 md:mr-2">
 
-                        <img src="../GetDPhone/img/Huawei/Huawei Y5p.png" alt="" class="">
+                        <img src="./assets/img/Huawei/Huawei Y5p.png" alt="" class="">
 
                         <h2 class="text-center font-bold xl:font-medium text-xl xl:text-2xl mt-2">Huawei Y5p</h2>
 
@@ -523,7 +523,7 @@
 
                     <div class="bg-white font-Gorditas">
 
-                        <img src="../GetDPhone/img/Huawei/Huawei P30 Pro.png" alt="" class="">
+                        <img src="./assets/img/Huawei/Huawei P30 Pro.png" alt="" class="">
 
                         <h2 class="text-center font-bold xl:font-medium text-xl xl:text-2xl mt-2">Huawei P30 Pro</h2>
 
@@ -645,16 +645,16 @@
 
                 <div class="flex">
                     <a href="">
-                        <img src="../GetDPhone/img/Footer icons/youtube.png" alt="" class="h-6 w-6 mr-2"> </a>
+                        <img src="./assets/img/Footer icons/youtube.png" alt="" class="h-6 w-6 mr-2"> </a>
 
                     <a href="">
-                        <img src="../GetDPhone/img/Footer icons/instagram.png" alt="" class="h-6 w-6 mr-2"></a>
+                        <img src="./assets/img/Footer icons/instagram.png" alt="" class="h-6 w-6 mr-2"></a>
 
                     <a href="">
-                        <img src="../GetDPhone/img/Footer icons/facebook.png" alt="" class="h-6 w-6 mr-2"> </a>
+                        <img src="./assets/img/Footer icons/facebook.png" alt="" class="h-6 w-6 mr-2"> </a>
 
                     <a href="">
-                        <img src="../GetDPhone/img/Footer icons/twitter.png" alt="" class="h-6 w-6"> </a>
+                        <img src="./assets/img/Footer icons/twitter.png" alt="" class="h-6 w-6"> </a>
                 </div>
 
             </div>
