--- a/products(Huawei).html
+++ b/products(Huawei).html
@@ -182,7 +182,7 @@
 
             <div class="lg:mr-20">
 
-                <img src="../GetDPhone/img/Products/Huawei.png" alt="" class="sm:h-80 lg:h-auto">
+                <img src="./assets/img/Products/Huawei.png" alt="" class="sm:h-80 lg:h-auto">
 
                 <div class="flex mt-4">
                     <div class="bg-square w-20 h-20 mx-2 lg:ml-4 lg:w-32 lg:h-32"></div>
@@ -256,7 +256,7 @@
 
                     <div class="font-bold">
 
-                        <img src="../GetDPhone/img/R_Accessories/Huawei freebuds pro.png" alt="">
+                        <img src="./assets/img/R_Accessories/Huawei freebuds pro.png" alt="">
 
                         <h2 class="text-center mt-4">HUAWEI FreeBuds Pro</h2>
 
@@ -407,16 +407,16 @@
 
                 <div class="flex">
                     <a href="">
-                        <img src="../GetDPhone/img/Footer icons/youtube.png" alt="" class="h-6 w-6 mr-2"> </a>
+                        <img src="./assets/img/Footer icons/youtube.png" alt="" class="h-6 w-6 mr-2"> </a>
 
                     <a href="">
-                        <img src="../GetDPhone/img/Footer icons/instagram.png" alt="" class="h-6 w-6 mr-2"></a>
+                        <img src="./assets/img/Footer icons/instagram.png" alt="" class="h-6 w-6 mr-2"></a>
 
                     <a href="">
-                        <img src="../GetDPhone/img/Footer icons/facebook.png" alt="" class="h-6 w-6 mr-2"> </a>
+                        <img src="./assets/img/Footer icons/facebook.png" alt="" class="h-6 w-6 mr-2"> </a>
 
                     <a href="">
-                        <img src="../GetDPhone/img/Footer icons/twitter.png" alt="" class="h-6 w-6"> </a>
+                        <img src="./assets/img/Footer icons/twitter.png" alt="" class="h-6 w-6"> </a>
                 </div>
 
             </div>
