--- a/signup.html
+++ b/signup.html
@@ -11,9 +11,9 @@
 
 <body class="font-Gorditas">
 
-     <!-- navbar -->
+    <!-- navbar -->
 
-     <nav class="bg-gray-100 md:sticky md:top-0" x-data="{navbarOpen:false}">
+    <nav class="bg-gray-100 md:sticky md:top-0" x-data="{navbarOpen:false}">
 
         <div class="container mx-auto py-2 px-4 md:flex md:justify-between">
 
@@ -36,8 +36,7 @@
                 <ul class="flex md:flex-row md:space-x-2 flex-col mb-2 w-full md:w-auto space-y-2 md:space-y-0">
 
                     <li>
-                        <a class="flex px-4 py-2 font-medium hover:bg-gray-300 rounded-md"
-                            href="index.html">Home</a>
+                        <a class="flex px-4 py-2 font-medium hover:bg-gray-300 rounded-md" href="index.html">Home</a>
                     </li>
 
                     <li class="relative" x-data="{dropdownOpen:false}">
@@ -119,7 +118,7 @@
             </div>
 
         </div>
-        
+
     </nav>
 
     <!-- navbar end -->
@@ -129,14 +128,16 @@
     <section class="flex justify-center">
 
         <div class="w-1/2 hidden md:block">
-            <img src="../GetDPhone/img/login.png" alt="">
+            <img src="./assets/img/login.png" alt="">
         </div>
 
         <div class="py-12 mt-12 w-full md:w-1/2 flex flex-col items-center px-10">
 
             <div class="flex font-bold">
 
-               <a href="login.html"> <h2 class="text-xl sm:text-3xl text-gray-300 mr-20 md:mr-20 sm:mr-40 ">LOGIN</h2> </a>
+                <a href="login.html">
+                    <h2 class="text-xl sm:text-3xl text-gray-300 mr-20 md:mr-20 sm:mr-40 ">LOGIN</h2>
+                </a>
 
                 <h2 class="text-xl sm:text-3xl border-b-2 border-red-500 cursor-pointer">SIGNUP
                 </h2>
@@ -186,15 +187,15 @@
                 <div class="flex mt-4 justify-center">
 
                     <a href="">
-                        <img src="../GetDPhone/img/icons/google.png" class="h-10 w-10 mr-6" alt="">
+                        <img src="./assets/img/icons/google.png" class="h-10 w-10 mr-6" alt="">
                     </a>
 
                     <a href="">
-                        <img src="../GetDPhone/img/Cus_Info_icons/instagram.png" alt="" class="h-10 w-10 mr-6">
+                        <img src="./assets/img/Cus_Info_icons/instagram.png" alt="" class="h-10 w-10 mr-6">
                     </a>
 
                     <a href="">
-                        <img src="../GetDPhone/img/Cus_Info_icons/twitter.png" alt="" class="h-10 w-10">
+                        <img src="./assets/img/Cus_Info_icons/twitter.png" alt="" class="h-10 w-10">
                     </a>
                 </div>
 
@@ -313,16 +314,16 @@
 
             <div class="flex">
                 <a href="">
-                    <img src="../GetDPhone/img/Footer icons/youtube.png" alt="" class="h-6 w-6 mr-2"> </a>
+                    <img src="./assets/img/Footer icons/youtube.png" alt="" class="h-6 w-6 mr-2"> </a>
 
                 <a href="">
-                    <img src="../GetDPhone/img/Footer icons/instagram.png" alt="" class="h-6 w-6 mr-2"></a>
+                    <img src="./assets/img/Footer icons/instagram.png" alt="" class="h-6 w-6 mr-2"></a>
 
                 <a href="">
-                    <img src="../GetDPhone/img/Footer icons/facebook.png" alt="" class="h-6 w-6 mr-2"> </a>
+                    <img src="./assets/img/Footer icons/facebook.png" alt="" class="h-6 w-6 mr-2"> </a>
 
                 <a href="">
-                    <img src="../GetDPhone/img/Footer icons/twitter.png" alt="" class="h-6 w-6"> </a>
+                    <img src="./assets/img/Footer icons/twitter.png" alt="" class="h-6 w-6"> </a>
             </div>
 
         </div>
