--- a/about.html
+++ b/about.html
@@ -48,8 +48,7 @@
                 <ul class="flex md:flex-row md:space-x-2 flex-col mb-2 w-full md:w-auto space-y-2 md:space-y-0">
 
                     <li>
-                        <a class="flex px-4 py-2 font-medium hover:bg-gray-300 rounded-md"
-                            href="index.html">Home</a>
+                        <a class="flex px-4 py-2 font-medium hover:bg-gray-300 rounded-md" href="index.html">Home</a>
                     </li>
 
                     <li class="relative" x-data="{dropdownOpen:false}">
@@ -93,7 +92,8 @@
 
                     <li>
 
-                        <a class="flex px-4 py-2 font-medium hover:bg-gray-300 rounded-md bg-gray-200" href="about.html">About Us
+                        <a class="flex px-4 py-2 font-medium hover:bg-gray-300 rounded-md bg-gray-200"
+                            href="about.html">About Us
                         </a>
 
                     </li>
@@ -131,13 +131,13 @@
             </div>
 
         </div>
-        
+
     </nav>
 
     <!-- navbar end -->
 
     <div>
-        <img src="../GetDPhone/img/bg-img-aboutUs.png" class="w-full" alt="">
+        <img src="./assets/img/bg-img-aboutUs.png" class="w-full" alt="">
     </div>
 
     <main>
@@ -146,7 +146,7 @@
 
         <section class="bg-gray-100 flex flex-col md:flex-row items-center">
             <div class="md:w-1/2">
-                <img src="../GetDPhone/img/UserInterface.png" alt="">
+                <img src="./assets/img/UserInterface.png" alt="">
             </div>
 
             <div class="font-bold md:w-1/2 text-center m-8">
@@ -162,7 +162,7 @@
 
         <section class="flex flex-col justify-center items-center">
 
-            <img class="mt-20 h-25 w-25" src="../GetDPhone/img/mission.png" alt="">
+            <img class="mt-20 h-25 w-25" src="./assets/img/mission.png" alt="">
 
             <div class="text-center mt-10 mb-20 p-4">
                 <h1 class="font-bold text-2xl">OUR MISSION</h1>
@@ -200,14 +200,14 @@
                 <div class="flex flex-col items-center md:flex-row">
 
                     <div class="text-center md:mx-2 md:px-10">
-                        <img src="../GetDPhone/img/The team/CEO.png" alt="">
+                        <img src="./assets/img/The team/CEO.png" alt="">
                         <h2 class="font-bold">Nick Jonas</h2>
                         <span>CEO</span>
                     </div>
 
 
                     <div class="text-center md:mx-2 mt-4 md:mt-0 md:px-10">
-                        <img src="../GetDPhone/img/The team/manager.png" alt="">
+                        <img src="./assets/img/The team/manager.png" alt="">
                         <h2 class="font-bold">Nick Peter</h2>
                         <span>Manager</span>
                     </div>
@@ -217,13 +217,13 @@
                 <div class="flex flex-col items-center md:flex-row md:mt-4 lg:mt-0">
 
                     <div class="text-center md:mx-2 mt-4 md:mt-0 md:px-10">
-                        <img src="../GetDPhone/img/The team/cashier.png" alt="">
+                        <img src="./assets/img/The team/cashier.png" alt="">
                         <h2 class="font-bold">James Peter</h2>
                         <span>Cashier</span>
                     </div>
 
                     <div class="text-center md:mx-2 mt-4 md:mt-0 md:px-10">
-                        <img src="../GetDPhone/img/The team/adora-staff.png" alt="">
+                        <img src="./assets/img/The team/adora-staff.png" alt="">
                         <h2 class="font-bold">Adora Okeke</h2>
                         <span>Staff</span>
                     </div>
@@ -231,7 +231,7 @@
                 </div>
 
                 <div class="text-center md:mr-2 md:mt-0 mt-4 lg:pb-6 lg:mr-10">
-                    <img src="../GetDPhone/img/The team/john-staff.png" alt="">
+                    <img src="./assets/img/The team/john-staff.png" alt="">
                     <h2 class="font-bold">Okon John</h2>
                     <span>Staff</span>
                 </div>
@@ -320,16 +320,16 @@
 
                 <div class="flex">
                     <a href="">
-                        <img src="../GetDPhone/img/Footer icons/youtube.png" alt="" class="h-6 w-6 mr-2"> </a>
+                        <img src="./assets/img/Footer icons/youtube.png" alt="" class="h-6 w-6 mr-2"> </a>
 
                     <a href="">
-                        <img src="../GetDPhone/img/Footer icons/instagram.png" alt="" class="h-6 w-6 mr-2"></a>
+                        <img src="./assets/img/Footer icons/instagram.png" alt="" class="h-6 w-6 mr-2"></a>
 
                     <a href="">
-                        <img src="../GetDPhone/img/Footer icons/facebook.png" alt="" class="h-6 w-6 mr-2"> </a>
+                        <img src="./assets/img/Footer icons/facebook.png" alt="" class="h-6 w-6 mr-2"> </a>
 
                     <a href="">
-                        <img src="../GetDPhone/img/Footer icons/twitter.png" alt="" class="h-6 w-6"> </a>
+                        <img src="./assets/img/Footer icons/twitter.png" alt="" class="h-6 w-6"> </a>
                 </div>
             </div>
 
