--- a/cart(Huawei).html
+++ b/cart(Huawei).html
@@ -156,7 +156,7 @@
 
             <div class="flex flex-col lg:flex-row items-center">
 
-                <img src="../GetDPhone/img/Huawei/Huawei Mate 40 Pro.png" alt="" class="sm:mr-20 md:mr-0">
+                <img src="./assets/img/Huawei/Huawei Mate 40 Pro.png" alt="" class="sm:mr-20 md:mr-0">
                 <p class="text-sm mt-2 lg:mt-0">Huawei Mate 40 Pro</p>
 
             </div>
@@ -284,16 +284,16 @@
 
             <div class="flex">
                 <a href="">
-                    <img src="../GetDPhone/img/Footer icons/youtube.png" alt="" class="h-6 w-6 mr-2"> </a>
+                    <img src="./assets/img/Footer icons/youtube.png" alt="" class="h-6 w-6 mr-2"> </a>
 
                 <a href="">
-                    <img src="../GetDPhone/img/Footer icons/instagram.png" alt="" class="h-6 w-6 mr-2"></a>
+                    <img src="./assets/img/Footer icons/instagram.png" alt="" class="h-6 w-6 mr-2"></a>
 
                 <a href="">
-                    <img src="../GetDPhone/img/Footer icons/facebook.png" alt="" class="h-6 w-6 mr-2"> </a>
+                    <img src="./assets/img/Footer icons/facebook.png" alt="" class="h-6 w-6 mr-2"> </a>
 
                 <a href="">
-                    <img src="../GetDPhone/img/Footer icons/twitter.png" alt="" class="h-6 w-6"> </a>
+                    <img src="./assets/img/Footer icons/twitter.png" alt="" class="h-6 w-6"> </a>
             </div>
 
         </div>
