--- a/contactUs.html
+++ b/contactUs.html
@@ -54,8 +54,7 @@
                 <ul class="flex md:flex-row md:space-x-2 flex-col mb-2 w-full md:w-auto space-y-2 md:space-y-0">
 
                     <li>
-                        <a class="flex px-4 py-2 font-medium hover:bg-gray-300 rounded-md"
-                            href="index.html">Home</a>
+                        <a class="flex px-4 py-2 font-medium hover:bg-gray-300 rounded-md" href="index.html">Home</a>
                     </li>
 
                     <li class="relative" x-data="{dropdownOpen:false}">
@@ -106,7 +105,8 @@
 
                     <li>
 
-                        <a class="flex px-4 py-2 font-medium hover:bg-gray-300 rounded-md bg-gray-200" href="contactUs.html">Contact
+                        <a class="flex px-4 py-2 font-medium hover:bg-gray-300 rounded-md bg-gray-200"
+                            href="contactUs.html">Contact
                             Us
                         </a>
 
@@ -137,7 +137,7 @@
             </div>
 
         </div>
-        
+
     </nav>
 
     <!-- navbar end -->
@@ -147,11 +147,11 @@
         <div class="flex justify-center">
 
             <div>
-                <img src="../GetDPhone/img/contactUs.png" alt="">
+                <img src="./assets/img/contactUs.png" alt="">
             </div>
 
             <div class="hidden lg:block">
-                <img src="../GetDPhone/img/contactUs.png" alt="">
+                <img src="./assets/img/contactUs.png" alt="">
             </div>
         </div>
 
@@ -241,13 +241,13 @@
                 <div class="flex justify-center my-28 ">
 
                     <a href="">
-                        <img src="../GetDPhone/img/Cus_Info_icons/facebook.png" alt="" class="h-10 w-10 mr-9"> </a>
+                        <img src="./assets/img/Cus_Info_icons/facebook.png" alt="" class="h-10 w-10 mr-9"> </a>
 
                     <a href="">
-                        <img src="../GetDPhone/img/Cus_Info_icons/instagram.png" alt="" class="h-10 w-10 mr-9"></a>
+                        <img src="./assets/img/Cus_Info_icons/instagram.png" alt="" class="h-10 w-10 mr-9"></a>
 
                     <a href="">
-                        <img src="../GetDPhone/img/Cus_Info_icons/twitter.png" alt="" class="h-10 w-10"> </a>
+                        <img src="./assets/img/Cus_Info_icons/twitter.png" alt="" class="h-10 w-10"> </a>
                 </div>
                 <!-- Contact Information ends -->
 
@@ -352,16 +352,16 @@
 
                 <div class="flex">
                     <a href="">
-                        <img src="../GetDPhone/img/Footer icons/youtube.png" alt="" class="h-6 w-6 mr-2"> </a>
+                        <img src="./assets/img/Footer icons/youtube.png" alt="" class="h-6 w-6 mr-2"> </a>
 
                     <a href="">
-                        <img src="../GetDPhone/img/Footer icons/instagram.png" alt="" class="h-6 w-6 mr-2"></a>
+                        <img src="./assets/img/Footer icons/instagram.png" alt="" class="h-6 w-6 mr-2"></a>
 
                     <a href="">
-                        <img src="../GetDPhone/img/Footer icons/facebook.png" alt="" class="h-6 w-6 mr-2"> </a>
+                        <img src="./assets/img/Footer icons/facebook.png" alt="" class="h-6 w-6 mr-2"> </a>
 
                     <a href="">
-                        <img src="../GetDPhone/img/Footer icons/twitter.png" alt="" class="h-6 w-6"> </a>
+                        <img src="./assets/img/Footer icons/twitter.png" alt="" class="h-6 w-6"> </a>
                 </div>
 
             </div>
