--- a/login.html
+++ b/login.html
@@ -36,8 +36,7 @@
                 <ul class="flex md:flex-row md:space-x-2 flex-col mb-2 w-full md:w-auto space-y-2 md:space-y-0">
 
                     <li>
-                        <a class="flex px-4 py-2 font-medium hover:bg-gray-300 rounded-md"
-                            href="index.html">Home</a>
+                        <a class="flex px-4 py-2 font-medium hover:bg-gray-300 rounded-md" href="index.html">Home</a>
                     </li>
 
                     <li class="relative" x-data="{dropdownOpen:false}">
@@ -119,7 +118,7 @@
             </div>
 
         </div>
-        
+
     </nav>
 
     <!-- navbar end -->
@@ -129,7 +128,7 @@
     <section class="flex justify-center">
 
         <div class="w-1/2 hidden md:block">
-            <img src="../GetDPhone/img/login.png" alt="">
+            <img src="./assets/img/login.png" alt="">
         </div>
 
         <div class="py-12 mt-12 w-full md:w-1/2 flex flex-col items-center px-10">
@@ -139,7 +138,9 @@
                 <h2 class="text-xl sm:text-3xl mr-20 md:mr-20 sm:mr-40 border-b-2 border-red-500 cursor-pointer">LOGIN
                 </h2>
 
-                <a href="signup.html"> <h2 class="text-xl sm:text-3xl text-gray-300">SIGNUP</h2></a>
+                <a href="signup.html">
+                    <h2 class="text-xl sm:text-3xl text-gray-300">SIGNUP</h2>
+                </a>
 
             </div>
 
@@ -177,15 +178,15 @@
                 <div class="flex mt-4 justify-center">
 
                     <a href="">
-                        <img src="../GetDPhone/img/icons/google.png" class="h-10 w-10 mr-6" alt="">
+                        <img src="./assets/img/icons/google.png" class="h-10 w-10 mr-6" alt="">
                     </a>
 
                     <a href="">
-                        <img src="../GetDPhone/img/Cus_Info_icons/instagram.png" alt="" class="h-10 w-10 mr-6">
+                        <img src="./assets/img/Cus_Info_icons/instagram.png" alt="" class="h-10 w-10 mr-6">
                     </a>
 
                     <a href="">
-                        <img src="../GetDPhone/img/Cus_Info_icons/twitter.png" alt="" class="h-10 w-10">
+                        <img src="./assets/img/Cus_Info_icons/twitter.png" alt="" class="h-10 w-10">
                     </a>
                 </div>
 
@@ -304,16 +305,16 @@
 
             <div class="flex">
                 <a href="">
-                    <img src="../GetDPhone/img/Footer icons/youtube.png" alt="" class="h-6 w-6 mr-2"> </a>
+                    <img src="./assets/img/Footer icons/youtube.png" alt="" class="h-6 w-6 mr-2"> </a>
 
                 <a href="">
-                    <img src="../GetDPhone/img/Footer icons/instagram.png" alt="" class="h-6 w-6 mr-2"></a>
+                    <img src="./assets/img/Footer icons/instagram.png" alt="" class="h-6 w-6 mr-2"></a>
 
                 <a href="">
-                    <img src="../GetDPhone/img/Footer icons/facebook.png" alt="" class="h-6 w-6 mr-2"> </a>
+                    <img src="./assets/img/Footer icons/facebook.png" alt="" class="h-6 w-6 mr-2"> </a>
 
                 <a href="">
-                    <img src="../GetDPhone/img/Footer icons/twitter.png" alt="" class="h-6 w-6"> </a>
+                    <img src="./assets/img/Footer icons/twitter.png" alt="" class="h-6 w-6"> </a>
             </div>
 
         </div>
