--- a/productInventory(Iphone).html
+++ b/productInventory(Iphone).html
@@ -36,7 +36,7 @@
 
     <!-- navbar -->
 
-     <nav class="bg-gray-100 md:sticky md:top-0" x-data="{navbarOpen:false}">
+    <nav class="bg-gray-100 md:sticky md:top-0" x-data="{navbarOpen:false}">
 
         <div class="container mx-auto py-2 px-4 md:flex md:justify-between">
 
@@ -59,8 +59,7 @@
                 <ul class="flex md:flex-row md:space-x-2 flex-col mb-2 w-full md:w-auto space-y-2 md:space-y-0">
 
                     <li>
-                        <a class="flex px-4 py-2 font-medium hover:bg-gray-300 rounded-md"
-                            href="index.html">Home</a>
+                        <a class="flex px-4 py-2 font-medium hover:bg-gray-300 rounded-md" href="index.html">Home</a>
                     </li>
 
                     <li class="relative" x-data="{dropdownOpen:false}">
@@ -142,7 +141,7 @@
             </div>
 
         </div>
-        
+
     </nav>
 
     <!-- navbar end -->
@@ -175,9 +174,10 @@
     </section>
 
     <div class="flex justify-end font-Gorditas font-medium mr-4">
-        
+
         <p class="mr-2">Sort By: Featured </p>
-        <img src="https://img.icons8.com/external-tanah-basah-basic-outline-tanah-basah/19/000000/external-chevron-arrows-tanah-basah-basic-outline-tanah-basah-4.png"/>
+        <img
+            src="https://img.icons8.com/external-tanah-basah-basic-outline-tanah-basah/19/000000/external-chevron-arrows-tanah-basah-basic-outline-tanah-basah-4.png" />
 
     </div>
 
@@ -241,7 +241,7 @@
 
                     <div class="bg-white font-Gorditas mb-4 md:mb-0 md:mr-2">
 
-                        <a href="products(Iphone).html"> <img src="../GetDPhone/img/iphone/iphone 11 pro max.png" alt=""
+                        <a href="products(Iphone).html"> <img src="./assets/img/iphone/iphone 11 pro max.png" alt=""
                                 class=""> </a>
 
                         <h2 class="text-center font-bold xl:font-medium md:text-lg text-xl xl:text-2xl mt-2">iPhone 11
@@ -261,7 +261,7 @@
 
                     <div class="bg-white font-Gorditas mb-4 md:mb-0 md:mr-2">
 
-                        <img src="../GetDPhone/img/iphone/iphone 11 pro max.png" alt="" class="">
+                        <img src="./assets/img/iphone/iphone 11 pro max.png" alt="" class="">
 
                         <h2 class="text-center font-bold xl:font-medium text-xl xl:text-2xl mt-2">iPhone 11 Pro</h2>
 
@@ -279,7 +279,7 @@
 
                     <div class="bg-white font-Gorditas">
 
-                        <img src="../GetDPhone/img/iphone/iphone xs max.png" alt="" class="">
+                        <img src="./assets/img/iphone/iphone xs max.png" alt="" class="">
 
                         <h2 class="text-center font-bold xl:font-medium text-xl xl:text-2xl mt-2">iPhone XS Max</h2>
 
@@ -303,7 +303,7 @@
 
                     <div class="bg-white font-Gorditas mb-2 md:mb-0 md:mr-2">
 
-                        <img src="../GetDPhone/img/iphone/iphone xs max.png" alt="" class="">
+                        <img src="./assets/img/iphone/iphone xs max.png" alt="" class="">
 
                         <h2 class="text-center font-bold xl:font-medium text-xl xl:text-2xl mt-2">iPhone XS</h2>
 
@@ -321,7 +321,7 @@
 
                     <div class="bg-white font-Gorditas mb-2 md:mb-0 md:mr-2">
 
-                        <img src="../GetDPhone/img/iphone/iphone xs max.png" alt="" class="">
+                        <img src="./assets/img/iphone/iphone xs max.png" alt="" class="">
 
                         <h2 class="text-center font-bold xl:font-medium text-xl xl:text-2xl mt-2">iPhone XR</h2>
 
@@ -339,7 +339,7 @@
 
                     <div class="bg-white font-Gorditas">
 
-                        <img src="../GetDPhone/img/iphone/iphone xs max.png" alt="" class="">
+                        <img src="./assets/img/iphone/iphone xs max.png" alt="" class="">
 
                         <h2 class="text-center font-bold xl:font-medium text-xl xl:text-2xl mt-2">iPhone X</h2>
 
@@ -363,7 +363,7 @@
 
                     <div class="bg-white mb-2 font-Gorditas md:mb-0 md:mr-2">
 
-                        <img src="../GetDPhone/img/iphone/iphone 8 plus.png" alt="" class="">
+                        <img src="./assets/img/iphone/iphone 8 plus.png" alt="" class="">
 
                         <h2 class="text-center font-bold xl:font-medium text-xl xl:text-2xl mt-2">iPhone 8 Plus</h2>
 
@@ -381,7 +381,7 @@
 
                     <div class="bg-white mb-2 font-Gorditas md:mb-0 md:mr-2">
 
-                        <img src="../GetDPhone/img/iphone/iphone 8.png" alt="" class="">
+                        <img src="./assets/img/iphone/iphone 8.png" alt="" class="">
 
                         <h2 class="text-center font-bold xl:font-medium text-xl xl:text-2xl mt-2">iPhone 8</h2>
 
@@ -399,7 +399,7 @@
 
                     <div class="bg-white font-Gorditas">
 
-                        <img src="../GetDPhone/img/iphone/iphone 7 plus.png" alt="" class="">
+                        <img src="./assets/img/iphone/iphone 7 plus.png" alt="" class="">
 
                         <h2 class="text-center font-bold xl:font-medium text-xl xl:text-2xl mt-2">iPhone 7 Plus</h2>
 
@@ -423,7 +423,7 @@
 
                     <div class="bg-white mb-2 font-Gorditas md:mb-0 md:mr-2">
 
-                        <img src="../GetDPhone/img/iphone/iphone 7.png" alt="" class="">
+                        <img src="./assets/img/iphone/iphone 7.png" alt="" class="">
 
                         <h2 class="text-center font-bold xl:font-medium text-xl xl:text-2xl mt-2">iPhone 7</h2>
 
@@ -441,7 +441,7 @@
 
                     <div class="bg-white mb-2 font-Gorditas md:mb-0 md:mr-2">
 
-                        <img src="../GetDPhone/img/iphone/iphone 6s.png" alt="" class="">
+                        <img src="./assets/img/iphone/iphone 6s.png" alt="" class="">
 
                         <h2 class="text-center font-bold xl:font-medium text-xl xl:text-2xl mt-2">iPhone 6s</h2>
 
@@ -459,7 +459,7 @@
 
                     <div class="bg-white font-Gorditas">
 
-                        <img src="../GetDPhone/img/iphone/iphone 6s.png" alt="" class="">
+                        <img src="./assets/img/iphone/iphone 6s.png" alt="" class="">
 
                         <h2 class="text-center font-bold xl:font-medium text-xl xl:text-2xl mt-2">iPhone 6</h2>
 
@@ -581,16 +581,16 @@
 
                 <div class="flex">
                     <a href="">
-                        <img src="../GetDPhone/img/Footer icons/youtube.png" alt="" class="h-6 w-6 mr-2"> </a>
+                        <img src="./assets/img/Footer icons/youtube.png" alt="" class="h-6 w-6 mr-2"> </a>
 
                     <a href="">
-                        <img src="../GetDPhone/img/Footer icons/instagram.png" alt="" class="h-6 w-6 mr-2"></a>
+                        <img src="./assets/img/Footer icons/instagram.png" alt="" class="h-6 w-6 mr-2"></a>
 
                     <a href="">
-                        <img src="../GetDPhone/img/Footer icons/facebook.png" alt="" class="h-6 w-6 mr-2"> </a>
+                        <img src="./assets/img/Footer icons/facebook.png" alt="" class="h-6 w-6 mr-2"> </a>
 
                     <a href="">
-                        <img src="../GetDPhone/img/Footer icons/twitter.png" alt="" class="h-6 w-6"> </a>
+                        <img src="./assets/img/Footer icons/twitter.png" alt="" class="h-6 w-6"> </a>
                 </div>
 
             </div>
