--- a/products(samsung).html
+++ b/products(samsung).html
@@ -185,7 +185,7 @@
 
             <div class="lg:mr-20">
 
-                <img src="../GetDPhone/img/Products/samsung.png" alt="" class="sm:h-80 lg:h-auto">
+                <img src="./assets/img/Products/samsung.png" alt="" class="sm:h-80 lg:h-auto">
 
                 <div class="flex mt-4">
                     <div class="bg-square w-20 h-20 mx-2 lg:ml-4 lg:w-32 lg:h-32"></div>
@@ -240,8 +240,9 @@
 
                     <p class="text-4xl font-bold mb-2">N500,000</p>
 
-                    <a href="cart(Samsung).html"> <button class="bg-black text-white px-20 py-1 lg:py-2 rounded font-bold text-xl lg:text-base">Add to
-                        Cart</button></a>
+                    <a href="cart(Samsung).html"> <button
+                            class="bg-black text-white px-20 py-1 lg:py-2 rounded font-bold text-xl lg:text-base">Add to
+                            Cart</button></a>
 
                 </div>
 
@@ -263,7 +264,7 @@
 
                     <div class="font-bold">
 
-                        <img src="../GetDPhone/img/R_Accessories/Samsung/Silicone Cover Black.png" alt="">
+                        <img src="./assets/img/R_Accessories/Samsung/Silicone Cover Black.png" alt="">
 
                         <h2 class="text-center mt-4">Silicone Cover Black</h2>
 
@@ -273,7 +274,7 @@
 
                     <div class="font-bold">
 
-                        <img src="../GetDPhone/img/R_Accessories/Samsung/Galaxy buds mystic bronxe.png" alt="">
+                        <img src="./assets/img/R_Accessories/Samsung/Galaxy buds mystic bronxe.png" alt="">
 
                         <h2 class="text-center">Galaxy Buds Mystic Bronze</h2>
 
@@ -283,7 +284,7 @@
 
                     <div class="font-bold">
 
-                        <img src="../GetDPhone/img/R_Accessories/Samsung/Wireless charger pad 9W.png" alt="">
+                        <img src="./assets/img/R_Accessories/Samsung/Wireless charger pad 9W.png" alt="">
 
                         <h2 class="text-center">Wireless Charger Pad 9W</h2>
 
@@ -434,16 +435,16 @@
 
                 <div class="flex">
                     <a href="">
-                        <img src="../GetDPhone/img/Footer icons/youtube.png" alt="" class="h-6 w-6 mr-2"> </a>
+                        <img src="./assets/img/Footer icons/youtube.png" alt="" class="h-6 w-6 mr-2"> </a>
 
                     <a href="">
-                        <img src="../GetDPhone/img/Footer icons/instagram.png" alt="" class="h-6 w-6 mr-2"></a>
+                        <img src="./assets/img/Footer icons/instagram.png" alt="" class="h-6 w-6 mr-2"></a>
 
                     <a href="">
-                        <img src="../GetDPhone/img/Footer icons/facebook.png" alt="" class="h-6 w-6 mr-2"> </a>
+                        <img src="./assets/img/Footer icons/facebook.png" alt="" class="h-6 w-6 mr-2"> </a>
 
                     <a href="">
-                        <img src="../GetDPhone/img/Footer icons/twitter.png" alt="" class="h-6 w-6"> </a>
+                        <img src="./assets/img/Footer icons/twitter.png" alt="" class="h-6 w-6"> </a>
                 </div>
 
             </div>
